--- a/_config.yml
+++ b/_config.yml
@@ -7,7 +7,7 @@
 # https://learnxinyminutes.com/docs/yaml/
 
 title: carbon2silicon
-description: An Analytical perspective.
+description: An Mathematical perspective.
 github_username: prakashjayy
 # you can comment the below line out if your repo name is not different than your baseurl
 github_repo: "carbon2silicon"
@@ -49,7 +49,7 @@ use_math: true
 show_description: true
 
 # Set this to true to display image previews on home page, if they exist
-show_image: false
+show_image: true
 
 # Set this to true to display tags on each post
 show_tags: true
